# esp32s2-ulp-riscv-blinky

./: .gitmodules  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  esp32s2-ulp-riscv-blinky.c
main/ulp/: main.c
